apache-airflow-data-pipelines/logs/dag_id=process_employee/run_id=manual__2024-08-24T181148.036128+0000/task_id=create_employee_table/attempt=1.log
[2024-08-24T18:11:50.061+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2024-08-24T18:11:50.107+0000] {taskinstance.py:2603} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: process_employee.create_employee_table manual__2024-08-24T18:11:48.036128+00:00 [queued]>
[2024-08-24T18:11:50.124+0000] {taskinstance.py:2603} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: process_employee.create_employee_table manual__2024-08-24T18:11:48.036128+00:00 [queued]>
[2024-08-24T18:11:50.125+0000] {taskinstance.py:2856} INFO - Starting attempt 1 of 1
[2024-08-24T18:11:50.154+0000] {taskinstance.py:2879} INFO - Executing <Task(SQLExecuteQueryOperator): create_employee_table> on 2024-08-24 18:11:48.036128+00:00
[2024-08-24T18:11:50.173+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'process_employee', 'create_employee_table', 'manual__2024-08-24T18:11:48.036128+00:00', '--job-id', '73', '--raw', '--subdir', 'DAGS_FOLDER/employee_DAG.py', '--cfg-path', '/tmp/tmpsw_mmknj']
[2024-08-24T18:11:50.174+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:70: DeprecationWarning: This process (pid=515) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-08-24T18:11:50.177+0000] {standard_task_runner.py:105} INFO - Job 73: Subtask create_employee_table
[2024-08-24T18:11:50.177+0000] {standard_task_runner.py:72} INFO - Started process 518 to run task
[2024-08-24T18:11:50.365+0000] {task_command.py:467} INFO - Running <TaskInstance: process_employee.create_employee_table manual__2024-08-24T18:11:48.036128+00:00 [running]> on host 67412decceee
[2024-08-24T18:11:50.615+0000] {taskinstance.py:3122} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='process_employee' AIRFLOW_CTX_TASK_ID='create_employee_table' AIRFLOW_CTX_EXECUTION_DATE='2024-08-24T18:11:48.036128+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-08-24T18:11:48.036128+00:00'
[2024-08-24T18:11:50.620+0000] {taskinstance.py:731} INFO - ::endgroup::
[2024-08-24T18:11:50.631+0000] {sql.py:282} INFO - Executing: 
CREATE TABLE IF NOT EXIXTS EMPLOYEES (
    "SERIAL_NUMBER" NUMERIC PRIMARY KEY,
    "COMPANY_NAME" VARCHAR(100),
    "EMPLOYEE MARKME" TEXT,
    "LEAVE" INTEGER
);
[2024-08-24T18:11:50.647+0000] {base.py:84} INFO - Retrieving connection 'employee_db_conn'
[2024-08-24T18:11:50.660+0000] {base.py:84} INFO - Retrieving connection 'employee_db_conn'
[2024-08-24T18:11:50.861+0000] {sql.py:509} INFO - Running statement: 
CREATE TABLE IF NOT EXIXTS EMPLOYEES (
    "SERIAL_NUMBER" NUMERIC PRIMARY KEY,
    "COMPANY_NAME" VARCHAR(100),
    "EMPLOYEE MARKME" TEXT,
    "LEAVE" INTEGER
);, parameters: None
[2024-08-24T18:11:50.877+0000] {taskinstance.py:3301} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 288, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 456, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 514, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "EXIXTS"
LINE 2: CREATE TABLE IF NOT EXIXTS EMPLOYEES (
                            ^

[2024-08-24T18:11:50.893+0000] {taskinstance.py:1225} INFO - Marking task as FAILED. dag_id=process_employee, task_id=create_employee_table, run_id=manual__2024-08-24T18:11:48.036128+00:00, execution_date=20240824T181148, start_date=20240824T181150, end_date=20240824T181150
[2024-08-24T18:11:50.926+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2024-08-24T18:11:50.927+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 73 for task create_employee_table (syntax error at or near "EXIXTS"
LINE 2: CREATE TABLE IF NOT EXIXTS EMPLOYEES (
                            ^
; 518)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 115, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2995, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3149, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3173, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 288, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 456, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 514, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "EXIXTS"
LINE 2: CREATE TABLE IF NOT EXIXTS EMPLOYEES (
                            ^

[2024-08-24T18:11:50.965+0000] {local_task_job_runner.py:261} INFO - Task exited with return code 1
[2024-08-24T18:11:51.017+0000] {taskinstance.py:3891} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-08-24T18:11:51.026+0000] {local_task_job_runner.py:240} INFO - ::endgroup::
